	PR c++/63485 	* tree.c (build_cplus_array_type): Look for a type with no 	typedef-name or attributes.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@216012 138bc75d-0d04-0410-961f-82ee72b054a4